unpackaged/config/ready/01_AccountsReceivableDisplay/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>redu_Accounts_Receivable_Amount__c</fullName>
        <description>Accounts Receivable outstanding amount for the student, synced from external accounting system</description>
        <inlineHelpText>Accounts Receivable outstanding amount for the student, synced from external accounting system</inlineHelpText>
        <label>Accounts Receivable Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>redu_Accounts_Receivable_Last_Updated__c</fullName>
        <description>Date Time that the Accounts Receivable Amount is last synced</description>
        <inlineHelpText>Date Time that the Accounts Receivable Amount is last synced</inlineHelpText>
        <label>Accounts Receivable Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>redu_Displayed_AR_Amount__c</fullName>
        <description>Accounts Receivable amount that will be displayed in the Community</description>
        <formula>redu_Accounts_Receivable_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Accounts Receivable amount that will be displayed in the Community</inlineHelpText>
        <label>Displayed Accounts Receivable Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
</CustomObject>